# greentic-i18n

./: Cargo.toml  README.md  publish.sh
.codex/: PR-01-tra.md  PR-02-tra.md  PR-02.md  PR-03-tra.md  PR-03.md  PR-04-tra.md  PR-05-tra.md  PR-06.tra.md  PR-07-tra.md  repo_overview.md
.codex/done/: PR-0.6.0-i18n-kickstart.md  PR-04.md  PR-05.md  PR-06.md
.github/workflows/: i18n_translate_bot.yml  i18n_validate.yml  publish.yml
.i18n/: translator-state.json
ci/: local_check.sh
crates/greentic-i18n/: Cargo.toml
crates/greentic-i18n-lib/: Cargo.toml
crates/greentic-i18n-lib/fixtures/: i18n_id_v1_cases.json
crates/greentic-i18n-lib/src/: format.rs  lib.rs  tag.rs
crates/greentic-i18n-translator/: Cargo.toml
crates/greentic-i18n-translator/fixtures/: en.json  sample.json
crates/greentic-i18n-translator/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
crates/greentic-i18n-translator/src/: cache.rs  cli.rs  cli_i18n.rs  git_diff.rs  json_map.rs  lib.rs  main.rs  paths.rs  state.rs  validate.rs
crates/greentic-i18n-translator/src/provider/: codex_cli.rs  mod.rs
docs/: cli-i18n-codex-playbook.md  greentic-i18n-cli-json-v1.md  i18n-id-v1.md  i18n-translator.md  resolver-contract.md
tools/: i18n.sh
(+69 files in other folders)
