[package]
name = "greentic-i18n-lib"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Canonical resolution/formatting library for Greentic localization profiles."
repository = "https://github.com/greentic-ng/greentic-i18n"
homepage = "https://github.com/greentic-ng/greentic-i18n"
documentation = "https://docs.rs/greentic-i18n-lib"
keywords = ["i18n", "localization", "greentic", "formatting"]
readme = "../../README.md"

[dependencies]
blake3 = { workspace = true }
data-encoding = { workspace = true }

[features]
icu4x = []

[dev-dependencies]
serde_json = { workspace = true }
