[package]
name = "greentic-i18n-translator"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "CLI tooling for i18n translation workflows."
repository = "https://github.com/greentic-ng/greentic-i18n"
homepage = "https://github.com/greentic-ng/greentic-i18n"
documentation = "https://docs.rs/greentic-i18n-translator"
keywords = ["cli", "i18n", "translation", "greentic"]
readme = "../../README.md"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
blake3 = { workspace = true }
